Add more drinks & redesign cells

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
   <script src="orderdrink.js"></script>  
 
   <script type="text/template" id="drink-template">
-    <div class="col-sm-6 col-md-6 col-lg-6 cell animated faster pulse">
-      <div class="row">
-        <div class="btn metro btn-sq-lg plus"><%- name%></div>
-        <div class="btn btn-sq minus"><%- num%></div>
+    <div class="col-sm-12 col-md-12 col-lg-6 animated faster pulse">
+      <div class="row cell">
+        <div class="col-sm-11 col-md-11 col-lg-11 btn metro btn-sq-lg plus text-center-container"><%- name%></div>
+        <div class="col-sm-1 col-md-1 col-lg-1 btn btn-sq minus text-center-container"><%- num%></div>
       </div>
     </div>
   </script>
